# Tro-pico

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  generate-linux-solution DEBUG.sh  generate-linux-solution.sh  generate-visual-2015-solution - DEBUG.bat  generate-visual-2015-solution.bat
CMake/: FindGLEW.cmake
Data/: simple.frag  simple.vert
Sources/: Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Color.h  Font.cpp  Font.h  Game.cpp  Game.h  Global.h  InputManager.h  Main.cpp  ResourceManager.cpp  ResourceManager.h  ScriptManager.h  Shaders.cpp  Shaders.h  config.h  config.h.in
